--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,10 @@
 	"license": "ISC",
 	"dependencies": {
 		"@zeit/next-css": "^1.0.1",
+		"axios": "^0.21.1",
+		"express-jwt": "^6.0.0",
+		"js-cookie": "^3.0.0",
+		"jsonwebtoken": "^8.5.1",
 		"next": "^11.0.1",
 		"nprogress": "^0.2.0",
 		"react": "^17.0.2",
