--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,8 @@
 		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^5.13.5",
 		"morgan": "^1.10.0",
-		"nodemon": "^2.0.12"
+		"nodemon": "^2.0.12",
+		"query-string": "^7.0.1",
+		"shortid": "^2.2.16"
 	}
 }
